# puan-solver-api

./: .gitignore  Dockerfile  README.md  api.py  pyproject.toml  pytest.ini
.github/workflows/: test_service.yml
app/: celery_app.py  models.py  settings.py  tasks.py
tests/: test_api.py  test_models.py  test_tasks.py
